plugins {
    id 'java'
    id 'org.springframework.boot' version '3.0.4'
    id 'io.spring.dependency-management' version '1.1.0'
}

group = 'com.paymentology'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'
targetCompatibility = '17'

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.liquibase:liquibase-core'
    implementation 'org.postgresql:postgresql:42.5.4'
    implementation 'org.hibernate:hibernate-validator:6.0.16.Final'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
}


var preview = '--enable-preview'
tasks.withType(JavaCompile).configureEach {
    options.compilerArgs += preview
}

tasks.withType(Test).configureEach {
    jvmArgs += preview
}

tasks.withType(JavaExec).configureEach {
    jvmArgs += preview
}
tasks.named('test') {
    useJUnitPlatform()
}
